# kalman

./: .travis.yml  CMakeLists.txt  README.md
include/: Helpers.hpp  Kalman.hpp  Kalman2d.hpp  Kalman6d.hpp  SickRobotDayTest.hpp
install/: linux.bash  mac.bash
python/: EKF2d.py  Kalman2d.py  Kalman6d.py  SickRobotDayTest.py
src/: Kalman.cpp  Kalman2d.cpp  Kalman6d.cpp  Main.cpp  Run2d.cpp  Run6d.cpp  RunSickRobotDayTest.cpp  SickRobotDayTest.cpp
test/: test.cpp  tests.cpp
